# AD

./: .gitignore  CMakeLists.txt
resources/scripts/: kernel_creation.py
src/: main.cu
src/array/: Array.h  CPUArray.h  GPUArray.h  SArray.h
src/assert/: Assert.h  Error.h  GPUAssert.h
src/graph/: Graph.h  Input.h  Node.h  Tape.h
src/graph/activation/: CReLU.cu  CReLU.h  Clip.h  ReLU.cu  ReLU.h  Sigmoid.cu  Sigmoid.h  Softmax.cu  Softmax.h  Swish.cu  Swish.h
src/graph/elementwise/: Add.cu  Add.h  Div.cu  Div.h  Exp.cu  Exp.h  Log.cu  Log.h  Mul.cu  Mul.h  Sub.cu  Sub.h
src/graph/nn/: Linear.h
src/graph/reduction/: Avg.h  Max.h  Mean.h  Min.h  Select.h  Sum.h
src/misc/: Startup.cu  config.cu  config.h  random.cu  random.h
src/operations/: operations.h
src/operations/adam/: adam.h
src/operations/adam_w/: adam_w.h
src/operations/affine/: affine.h  affine_host.cu  affine_kernel.cu
src/operations/affine_bp/: affine_bp.h  affine_bp_host.cu  affine_bp_kernel.cu
src/operations/base_operator/: base_operator.h  base_operator_host.cu  base_operator_kernel.cu
src/operations/base_operator_bp/: base_operator_bp.h  base_operator_bp_host.cu  base_operator_bp_kernel.cu
src/operations/clip/: clip.h  clip_host.cu  clip_kernel.cu
src/operations/clip_bp/: clip_bp.h  clip_bp_host.cu  clip_bp_kernel.cu
src/operations/clipped_relu/: clipped_relu.h
src/operations/clipped_relu_bp/: clipped_relu_bp.h  clipped_relu_bp_host.cu  (+1 more)
src/optimizer/: Adam.h  AdamW.h  Optimiser.h  RAdam.h  Ranger.h
src/tensor/: Dimension.h  Tensor.h  TensorDescriptor.h
(+59 files in other folders)
